<resources>
    <string name="app_name">NotificationPushTutorial</string>

    <string name="str_tv_logo">Tutorial Push Firebase</string>
    <!-- Strings related to attemptLogin -->
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_ime">Loguear</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="no_message_text">No hay ningúna notificación todavía</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
